# OtoDecks

./: CMakeLists.txt  TestJuce.jucer  TestJuce.sln  TestJuce_App.vcxproj  TestJuce_App.vcxproj.filters
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/TestJuce.xcodeproj/: project.pbxproj
Builds/VisualStudio2022/: TestJuce_App.vcxproj  TestJuce_App.vcxproj.filters  resources.rc
JuceLibraryCode/: JuceHeader.h
Source/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  DJAudioPlayer.cpp  DJAudioPlayer.h  DeckGUI.cpp  DeckGUI.h  Main.cpp  MainComponent.cpp  MainComponent.h  PlaylistComponent.cpp  PlaylistComponent.h  Track.cpp  Track.h  WaveformDisplay.cpp  WaveformDisplay.h
